[gd_scene load_steps=9 format=3 uid="uid://b7j8k3mam2p4q"]

[ext_resource type="PackedScene" uid="uid://v6sna08o3j3f" path="res://scenes/ui/hud/components/base/BaseHUDComponent.tscn" id="1_base_component"]
[ext_resource type="Script" uid="uid://duic8xjhudytg" path="res://scenes/ui/hud/components/core/AbilityBarComponent.gd" id="2_ability_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_container_bg"]
bg_color = Color(0.08, 0.12, 0.18, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.5, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ability_hover"]
bg_color = Color(0.2, 0.2, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.7, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ability_normal"]
bg_color = Color(0.15, 0.15, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ability_pressed"]
bg_color = Color(0.1, 0.1, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.9, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Theme" id="Theme_ability_button"]
Button/styles/hover = SubResource("StyleBoxFlat_ability_hover")
Button/styles/normal = SubResource("StyleBoxFlat_ability_normal")
Button/styles/pressed = SubResource("StyleBoxFlat_ability_pressed")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_swing_timer"]
size = Vector2(48, 48)

[node name="AbilityBarComponent" instance=ExtResource("1_base_component")]
custom_minimum_size = Vector2(280, 66)
script = ExtResource("2_ability_script")
max_abilities = 5
show_hotkeys = true
show_cooldown_text = true
component_id = "ability_bar"

[node name="Background" type="Panel" parent="." index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_container_bg")

[node name="AbilityContainer" type="HBoxContainer" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Ability1" type="Control" parent="AbilityContainer" index="0"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="AbilityButton" type="Button" parent="AbilityContainer/Ability1" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ability_button")
flat = true

[node name="CooldownOverlay" type="ColorRect" parent="AbilityContainer/Ability1" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="CooldownLabel" type="Label" parent="AbilityContainer/Ability1" index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SwingTimer" type="TextureProgressBar" parent="AbilityContainer/Ability1" index="3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
max_value = 1.0
step = 0.01
fill_mode = 4
radial_initial_angle = 270.0
texture_progress = SubResource("PlaceholderTexture2D_swing_timer")
tint_progress = Color(0.2, 0.8, 1, 0.7)

[node name="HotkeyLabel" type="Label" parent="AbilityContainer/Ability1" index="4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "LMB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ability2" type="Control" parent="AbilityContainer" index="1"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="AbilityButton" type="Button" parent="AbilityContainer/Ability2" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ability_button")
flat = true

[node name="CooldownOverlay" type="ColorRect" parent="AbilityContainer/Ability2" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="CooldownLabel" type="Label" parent="AbilityContainer/Ability2" index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotkeyLabel" type="Label" parent="AbilityContainer/Ability2" index="3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "RMB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ability3" type="Control" parent="AbilityContainer" index="2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="AbilityButton" type="Button" parent="AbilityContainer/Ability3" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ability_button")
flat = true

[node name="CooldownOverlay" type="ColorRect" parent="AbilityContainer/Ability3" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="CooldownLabel" type="Label" parent="AbilityContainer/Ability3" index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotkeyLabel" type="Label" parent="AbilityContainer/Ability3" index="3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "SPC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ability4" type="Control" parent="AbilityContainer" index="3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="AbilityButton" type="Button" parent="AbilityContainer/Ability4" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ability_button")
flat = true

[node name="CooldownOverlay" type="ColorRect" parent="AbilityContainer/Ability4" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="CooldownLabel" type="Label" parent="AbilityContainer/Ability4" index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotkeyLabel" type="Label" parent="AbilityContainer/Ability4" index="3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ability5" type="Control" parent="AbilityContainer" index="4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="AbilityButton" type="Button" parent="AbilityContainer/Ability5" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ability_button")
flat = true

[node name="CooldownOverlay" type="ColorRect" parent="AbilityContainer/Ability5" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="CooldownLabel" type="Label" parent="AbilityContainer/Ability5" index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotkeyLabel" type="Label" parent="AbilityContainer/Ability5" index="3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "E"
horizontal_alignment = 1
vertical_alignment = 1
